--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
               Üyelik
             </div>
             <div class="mobile-menu-item">
-              <img src="./assets/icons/cart.svg" width="24px" />
+              <div class="cart">
+                <img src="./assets/icons/cart.svg" width="24px" />
+                <span class="cart-count-mobile"></span>
+              </div>
               Sepetim
             </div>
           </div>
