--- a/index.html
+++ b/index.html
@@ -80,11 +80,8 @@
         </div>
       </header>
       <section class="products-slider">
-        <!-- Slider main container -->
-        <div class="swiper mySwiper">
-          <!-- Additional required wrapper -->
+        <div class="swiper">
           <div class="swiper-wrapper">
-            <!-- Slides -->
             <div class="swiper-slide">
               <img src="./assets/images/sony-walkman.png" />
             </div>
@@ -103,10 +100,7 @@
               <img src="https://via.placeholder.com/100" />
             </div>
           </div>
-          <!-- If we need pagination -->
           <div class="swiper-pagination"></div>
-
-          <!-- If we need navigation buttons -->
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
         </div>
@@ -129,7 +123,15 @@
             <img src="./assets/icons/arrow-right.svg" alt="" width="12px" />
           </span>
         </div>
-        <div class="product-list best-seller"></div>
+        <div class="mySwiper">        
+            <div
+              class="best-seller-swiper swiper-wrapper "
+            ></div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-best-button-prev"></div>
+            <div class="swiper-best-button-next"></div>
+          </div>
+        </div>
       </section>
       <footer>
         <div class="footer-links-container">
@@ -204,6 +206,7 @@
     </main>
 
     <script src="./js/fetchProducts.js"></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
@@ -212,6 +215,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="/js/initializeSwiper.js"></script>
     <script src="./js/vanilla-notify.js"></script>
+
     <script>
       const hamburgerMenuOpenButton = document.querySelector('.open');
       const hamburgerMenuCloseButton = document.querySelector('.close');
