--- a/index.html
+++ b/index.html
@@ -123,14 +123,10 @@
             <img src="./assets/icons/arrow-right.svg" alt="" width="12px" />
           </span>
         </div>
-        <div class="mySwiper">        
-            <div
-              class="best-seller-swiper swiper-wrapper "
-            ></div>
-            <div class="swiper-pagination"></div>
-            <div class="swiper-best-button-prev"></div>
-            <div class="swiper-best-button-next"></div>
-          </div>
+        <div class="mySwiper">
+          <div class="best-seller-swiper swiper-wrapper"></div>
+          <div class="swiper-best-button-prev"></div>
+          <div class="swiper-best-button-next"></div>
         </div>
       </section>
       <footer>
